infer/tests/codetoanalyze/objc/errors/memory_leaks_benchmark/MemoryLeakExample.h
/*
 * Copyright (c) 2014 - Facebook.
 * All rights reserved.
 */

#import <Foundation/NSObject.h>
#import <UIKit/UIKit.h>

@interface MemoryLeakExample : NSObject

@property UIView *backgroundCoveringView;
@property UIView *attachmentContainerView;

@end
